--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#06acd6);
+    background-image: linear-gradient(#000000,#06acd6);
     color:white;
     display: flex;
     justify-content: center;
